--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,3 @@
-*.js linguist-language=Java
-*.css linguist-language=Java
-*.html linguist-language=Java
+*.js linguist-language=Go
+*.css linguist-language=Go
+*.html linguist-language=Go
